Bug fixed: contact page mobile / iframe overlapping hours section

--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -41,8 +41,10 @@
         text-decoration: none
         color: black
   .iframe-container
+    width: 90%
     height: 50vh !important
+    margin: auto
     iframe
-      width: 100%
-      height: 50vh
-      margin: auto
+      width: 100% !important
+      height: 50vh !important
+      margin: auto !important
